# wgpu-rendergraph

./: Cargo.toml  README.md  app-716bba0df9bf2d0a.js  index.html
.github/workflows/: pages.yml  rust.yml
src/: lib.rs  main.rs  pass_configs.rs  passes.rs  render_graph.rs
src/passes/: blit_pass.rs  brightness_contrast_pass.rs  color_invert_pass.rs  compute_grayscale_pass.rs  convolution_pass.rs  edge_detection_pass.rs  egui_pass.rs  gaussian_blur_pass.rs  grayscale_pass.rs  histogram_compute_pass.rs  post_process_pass.rs  scene_pass.rs  shader_common.rs  sharpen_pass.rs  vignette_pass.rs
wgpu-render-graph/: Cargo.toml  README.md
wgpu-render-graph/src/: lib.rs
